--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Huda's Resume</title>
+<link rel="stylesheet" type="text/css"href="style.css">
+ <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.css">
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+	<div class='header-content'>
+	<h1> Huda AlshaikhSaleh</h1>
+	<h2> 1401 Prince of Wales Dr., Apt #:401</h2>
+	<h3> Ottawa, ON, K2C 3J8</h3>
+	<h4> (613) 890-3221, hudaalshaikhsaleh@cmail.carleton.ca</h4>
+	</div>
 
-</body>
+
+
+	<div class='myEducation container col-sm-4">.col-sm-4'>
+	<div class="jumbotron">
+	<h1>Education			September 2014-	Present</h1>
+	<h2>Faculty of Engineering and Design, Electrical Engineering</h2>
+	<h3>Carleton University, Ottawa, Ontario</h3>
+	</div>
+
+	</body>
 </html> 
+
+
+</html> 
+
 
  <!--This is a comment. Comments are not displayed in the browser-->
 
-<p>This is a paragraph.</p> 
+<p2>This is a paragraph.</p> 
+
+
